[gd_scene load_steps=7 format=2]

[ext_resource path="res://1939_nimatron/components/stare/atlases/base.tres" type="Texture" id=1]
[ext_resource path="res://1939_nimatron/components/stare/atlases/lower_shadow.tres" type="Texture" id=2]
[ext_resource path="res://1939_nimatron/components/stare/atlases/center_light.tres" type="Texture" id=3]
[ext_resource path="res://1939_nimatron/components/stare/atlases/upper_shadow.tres" type="Texture" id=4]
[ext_resource path="res://1939_nimatron/components/stare/painter.gd" type="Script" id=5]
[ext_resource path="res://1939_nimatron/components/stare/stare.gd" type="Script" id=6]

[node name="Stare" type="Node2D"]
script = ExtResource( 6 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CenterLight" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="lower_shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="upper_shadow" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Painter" type="Node" parent="."]
script = ExtResource( 5 )
